--- a/Mastering-blazor/src/BooksStore/BooksStore/Pages/Index.razor
+++ b/Mastering-blazor/src/BooksStore/BooksStore/Pages/Index.razor
@@ -7,3 +7,26 @@
 Welcome to your new app.
 
 <SurveyPrompt Title="How is Blazor working for you?" />
+
+<ModalPopup Title="Hi!" 
+IsOpen="@_isWelcomeModalOpen" 
+OnCloseClicked="() => _isWelcomeModalOpen = false">
+
+<ChildContent>
+<p>Welcome to our Books Store, here you will
+find a huge collection of books to help you
+build you career in software development,
+enjoy it!</p>
+</ChildContent>
+<FooterContent>
+<button class="btn btn-primary"
+        @onclick="() => { _isWelcomeModalOpen = false}">Discover It</button>
+
+</FooterContent>
+</ModalPopup>
+
+@code
+{
+    private bool _isWelcomeModalOpen = true;
+
+}
